# sign_GPS_coords

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  opcodes.txt  size.txt
client/: .env  Cargo.toml
client/device_register/src/: CMakeLists.txt  main.c
client/src/: main.rs
device_register/src/: CMakeLists.txt  main.c
server/: Cargo.toml
server/add_client/: CMakeLists.txt
server/add_client/src/: main.c
server/src/: main.rs
src/: main.rs
