[package]
name = "signDataRust"
version = "0.1.0"
edition = "2021"

[dependencies]
ff = "0.13.0"
halo2curves = "0.7.0"
hex = "0.4.3"
secp256k1 = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
zk-engine = { git = "https://github.com/ICME-Lab/zkEngine_dev", branch = "signing-circuit" }
