[package]
name = "signDataRust"
version = "0.1.0"
edition = "2021"
default-run = "signDataRust"

[dependencies]
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
ff = "0.13.0"
hex = "0.4.3"
secp256k1 = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
sha2 = "0.10.8"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
zk-engine = { git = "https://github.com/ICME-Lab/zkEngine_dev", branch = "signing-circuit" }
anyhow = "1.0.89"
dotenv = "0.15.0"
